# ai-vision-capture

./: .env.template  .gitignore  CLAUDE.md  GPT5_UPGRADE.md  Makefile  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
aicapture/: __init__.py  audio_transcriber.py  cache.py  ocr_parser.py  settings.py  utils.py  vid_capture.py  vision_capture.py  vision_models.py  vision_parser.py
docs/: blueprint.md  instructions.md  todo.md  video.md
examples/: configuration.md
examples/anthropic/: .env.example  anthropic_example.py  capture.py  parse_image.py  parse_pdf.py
examples/anthropic/bedrock/: parser_image.py
examples/auto/: parse_pdf.py
examples/azure/: .env.example  README.md  azure_example.py  parse_image_gpt5.py  parse_pdf.py
examples/azure_responses/: parse_image_gpt5.py  parse_pdf.py
examples/cookbook/: locate_text_in_an_image.ipynb  test_ocr_parser.ipynb
examples/gemini/: .env.example  README.md  gemini_example.py  parse_image.py  parse_pdf.py
examples/ollama/: parse_pdf.py
examples/openai/: .env.example  README.md  capture.py  openai_example.py  parse_image.py  parse_image_gpt5.py  parse_pdf.py
examples/openai_responses/: parse_image.py  parse_image_gpt5.py  parse_pdf.py  stateful_conversation.py
examples/vid_capture/: README.md  comprehensive_example.py  example.py
examples/video/: example.py  example_transcription_simple.py  example_transcription_with_cache.py  example_with_transcription.py  process_video_with_cache.py
tests/: generate_test_video.py  test_audio_transcriber.py  test_cache.py  test_content_cleaner.py  test_folder_parser.py  test_image_parser.py  test_partial_results.py  test_settings.py  test_utils.py  test_video_capture.py  test_vision_capture.py  test_vision_models.py  test_vision_parser.py  test_vision_parser_extended.py
vision_capture/: __init__.py  cache.py  settings.py  vid_capture.py  vision_models.py  vision_parser.py
